package com.socialpulse.app.post.entity;

public enum Privacy {
    PUBLIC,
    PRIVATE
}
